fix security modal text from collapsing when screen is small

--- a/app/assets/stylesheets/shared/modal/security.scss
+++ b/app/assets/stylesheets/shared/modal/security.scss
@@ -36,8 +36,9 @@
 }
 
 #signup-modal .private-content {
-	margin-left: 5px;
+	margin-left: 15px;
 	font-size: 14px;
+	max-width: 275px;
 }
 
 .continue-button {
